--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -24,12 +25,13 @@ android {
     }
 }
 
+
 dependencies {
     def room_version = "2.2.0-beta01"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.0.2'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -53,6 +55,10 @@ dependencies {
 
     implementation "android.arch.persistence.room:runtime:1.1.1"
     kapt "android.arch.persistence.room:compiler:1.1.1"
+
+    implementation "com.leinardi.android:speed-dial:3.1.1"
+    implementation 'com.afollestad.material-dialogs:core:0.8.6.1'
+    implementation 'com.afollestad.material-dialogs:commons:0.8.6.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
